Bug 1523721 - [Linux/Gtk+] Continue processing window_state_event handler when titlebar is updated. r=dao, a=RyanVM

Recently we quit nsWindow::OnWindowStateEvent()/window_state_event handler when titlebar needs an update due to focus change.
That's incorrect as we need to process other information from the handler - maxminized/normal window state.

Differential Revision: https://phabricator.services.mozilla.com/D18681